@@ -7,19 +7,35 @@
 # ignorados. Cualquier línea que comience con un caracter de puntuación se asume que es un comentario.
 
 ##
-# LoginTimeout -Number of seconds after a client's last login/renewal to terminate their connection.
-# 		Defaults to 1800s = 30 minutes.
-# 		Tiempo que un usuario podrá estar conectado a internet después del último login/re-login
-#		para terminar su conexión. Por defecto 30 minutos.
+# LoginTimeout -	Number of seconds after a client's last login/renewal to terminate their connection.
+# 					Defaults to 1800s = 30 minutes.
+#
+#					Tiempo que un usuario podrá estar conectado a internet después del último login/re-login
+#					para terminar su conexión. Por defecto 30 minutos.
 #
 LoginTimeout	1800
 
 ##
 # LoginGrace -	Number of seconds of grace period for authentication.
-#		Numero de segundos del período de gracia (durante el cual el usuario debe autenticarse en el
-#		servidor para seguir teniendo servicio de Internet)
+#
+#				Numero de segundos del período de gracia (durante el cual el usuario debe autenticarse en el
+#				servidor para seguir teniendo servicio de Internet)
 #
 LoginGrace	120
+
+##
+# LoginPunish - Number of seconds a client that did not authenticated during the grace period must wait
+#				until it can use the system again. Defaults to 300 s = 5 minutes.
+#
+#				Numero de segundos que un cliente que no se autentico durante el grace periodo debe esperar
+#				antes de poder usar el sistema de nuevo. Por defecto 300 s = 5 minutos.
+#
+LoginPunish 300
+
+##
+# AllowPunishment -	Use the punishment period. Defaults to 0 (do not use it)
+#					Usar la funcion de periodo de castigo. Por defecto no se usa.
+AllowPunishment 0
 
 ##
 # AuthServiceAddr -	Required. Must be set to the address of your authentication service.
@@ -301,6 +317,10 @@ DocumentRoot	/usr/share/sicat/htdocs
 # SplashForm -- Form displayed to users on capture.
 #
 SplashForm	splash.html
+
+# PunishForm -	Form displayed to users on punishment.
+#
+PunishForm	punish.html
 
 ##
 # LogoutURL - HTTP URL to redirect user after logout.
